WIP: Migrate CI to Gitlab

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -151,6 +151,26 @@ pages:
         paths:
             - public
 
+#################################################################
+## Build Documentation
+#################################################################
+module:
+    image:    registry.gitlab.com/splashsync/php-console:pages
+    stage:    deploy
+    tags:
+        - Dedicated
+    services:
+        - docker:dind
+    ################################################################################
+    # Run Test Script
+    script:
+        # Run Composer to Build deps
+        - curl -s https://raw.githubusercontent.com/BadPixxel/Php-Sdk/main/ci/composer.sh  | bash
+        # Build Documentation
+        - php splash/vendor/bin/grumphp run --tasks=build-module
+    artifacts:
+        paths:
+            - build
 
 ################################################################
 # Buil Bluesyndic Module 
