--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ stages:
 # Functional Tests
 ################################################################
 .functionnal:   &functionnal
-    when:       manual
+#    when:       manual
     stage:      tests
     tags:       ['Dedicated']
     retry:      2
@@ -100,7 +100,7 @@ Dol-9-Php-7.2:
 # Code Quality Verifications 
 ################################################################
 code_quality:
-    when:       manual
+#    when:       manual
     image:      monogramm/docker-dolibarr
     stage:      quality
     tags:       ['Dedicated']
