--- a/grumphp.yml
+++ b/grumphp.yml
@@ -37,6 +37,7 @@ parameters:
 
     # For Building Splash Module
     mod-src:            '/splash'
+    mod-target:         '/splash/'
     mod-file:           "module_splash-1.8.2"
 
     # For Building Splash Manifest
