CI: Test on V13

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,6 +83,10 @@ stages:
         - splash/vendor/phpunit/phpunit/phpunit -c travis/phpunit.xml.dist --testsuite=Local
         - splash/vendor/phpunit/phpunit/phpunit -c travis/phpunit.xml.dist
 
+Dol-13-Php-7.3:
+    image:          monogramm/docker-dolibarr:13.0-apache
+    <<: *functionnal
+
 Dol-12-Php-7.2:
     image:          monogramm/docker-dolibarr:12.0-apache
     <<: *functionnal
