--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@
 # 172.100.0.09        v09.dolibarr.local
 # 172.100.0.10        v10.dolibarr.local
 # 172.100.0.11        v11.dolibarr.local
+# 172.100.0.12        v12.dolibarr.local
+# 172.100.0.13        v13.dolibarr.local
 # 172.100.0.99        latest.dolibarr.local
 # 172.100.0.100       toolkit.dolibarr.local
 # 172.100.0.200       phpmyadmin.dolibarr.local
@@ -81,9 +83,36 @@ services:
             dolibarr:      { ipv4_address: 172.100.0.99 }
             splashsync:    { aliases: [ latest.dolibarr.local ] }
 
+    ################################################################################
+    # Dolibarr V13
+    dol-13:
+        image: monogramm/docker-dolibarr:12.0
+        container_name: dolibarr-v13
+        depends_on:
+            - mysql
+        environment:
+            - "DOLI_DB_TYPE=mysqli"
+            - "DOLI_DB_HOST=mysql"
+            - "DOLI_DB_NAME=dolibarr13"
+            - "DOLI_DB_USER=root"
+            - "DOLI_DB_PASSWORD=dolibarr"
+            - "DOLI_ADMIN_LOGIN=Admin"
+            - "DOLI_MODULES=modSplash,modCommande,modProduct,modCategorie,modStock,modBanque,modSociete,modFacture"
+            - "PHP_MEMORY_LIMIT=-1"
+            - SPLASH_WS_ID=ThisIsDol13Key
+            - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
+            - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
+        volumes:
+            - "./:/var/www/html/custom/"
+        command: sh /var/www/html/custom/docker/docker-entrypoint.sh
+        hostname: v13.dolibarr.local
+        networks:
+            dolibarr:      { ipv4_address: 172.100.0.13 }
+            splashsync:    { aliases: [ v13.dolibarr.local ] }
+
 #    ################################################################################
 #    # Dolibarr V12
-#    dol-10:
+#    dol-12:
 #        image: monogramm/docker-dolibarr:12.0
 #        container_name: dolibarr-v12
 #        depends_on:
@@ -106,7 +135,7 @@ services:
 #        hostname: v12.dolibarr.local
 #        networks:
 #            dolibarr:      { ipv4_address: 172.100.0.12 }
-#            splashsync:    { aliases: [ v10.dolibarr.local ] }
+#            splashsync:    { aliases: [ v12.dolibarr.local ] }
 
 #    ################################################################################
 #    # Dolibarr V11     
