--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -33,8 +33,8 @@
     <logging>
         <log type="coverage-html" target="coverage" lowUpperBound="35" highLowerBound="70" />
         <log type="coverage-text" target="php://stdout" showUncoveredFiles="true"/>
-        <log type="testdox-text" target="coverage/executed.txt"/>        
-    </logging> 
+        <junit outputFile="phpunit-report.xml"/>
+    </logging>
         
     <php>
         <ini    name="display_errors"   value="true"/>
