--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -33,7 +33,7 @@
     <logging>
         <log type="coverage-html" target="coverage" lowUpperBound="35" highLowerBound="70" />
         <log type="coverage-text" target="php://stdout" showUncoveredFiles="true"/>
-        <junit outputFile="phpunit-report.xml"/>
+        <junit outputFile="/var/www/html/phpunit-report.xml"/>
     </logging>
         
     <php>
