--- a/travis/phpunit.xml.dist
+++ b/travis/phpunit.xml.dist
@@ -31,10 +31,8 @@
     </filter>
 
     <logging>
-        <log type="coverage-html" target="../coverage" lowUpperBound="35" highLowerBound="70" />
-        <log type="coverage-text" target="php://stdout" showUncoveredFiles="true"/>
-        <log type="testdox-text" target="../coverage/executed.txt"/>        
-    </logging> 
+        <junit outputFile="/var/www/html/phpunit-report.xml"/>
+    </logging>
     
     <php>
         <ini    name="display_errors"   value="true"/>
