--- a/travis/phpunit.xml.dist
+++ b/travis/phpunit.xml.dist
@@ -31,7 +31,7 @@
     </filter>
 
     <logging>
-        <junit outputFile="/var/www/html/phpunit-report.xml"/>
+        <log type="junit" target="/var/www/html/phpunit-report.xml"/>
     </logging>
     
     <php>
