--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,7 @@ stages:
     artifacts:
         when: always
         reports:
-            junit: "/tmp/*-report.xml"
+            junit: "$CI_PROJECT_DIR/*-report.xml"
     ################################################################
     # Before Script
     before_script:
@@ -84,8 +84,8 @@ stages:
         # Show PhpUnit Version
         - splash/vendor/phpunit/phpunit/phpunit --version
         # Run PhpUnit Main Local Testsuite
-        - splash/vendor/phpunit/phpunit/phpunit -c travis/phpunit.xml.dist --testsuite=Local
-        - splash/vendor/phpunit/phpunit/phpunit -c travis/phpunit.xml.dist
+        - splash/vendor/phpunit/phpunit/phpunit -c travis/phpunit.xml.dist --log-junit $CI_PROJECT_DIR/local-report.xml --testsuite=Local
+        - splash/vendor/phpunit/phpunit/phpunit -c travis/phpunit.xml.dist --log-junit $CI_PROJECT_DIR/full-report.xml
 
 Dol-13-Php-7.3:
     image:          monogramm/docker-dolibarr:13.0-apache
