WIP: Migrate to tuxgasy/dolibarr

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@
 # 172.100.0.11        v11.dolibarr.local
 # 172.100.0.12        v12.dolibarr.local
 # 172.100.0.13        v13.dolibarr.local
+# 172.100.0.14        v14.dolibarr.local
 # 172.100.0.99        latest.dolibarr.local
 # 172.100.0.100       toolkit.dolibarr.local
 # 172.100.0.200       phpmyadmin.dolibarr.local
@@ -54,9 +55,9 @@ services:
             - dolibarr            
 
     ################################################################################
-    # Dolibarr Latest (Develop)     
+    # Dolibarr Latest (Develop)
     dolibarr:
-        image: monogramm/docker-dolibarr:develop
+        image: tuxgasy/dolibarr:develop
         container_name: dolibarr-latest
         depends_on:
             - mysql
@@ -67,26 +68,54 @@ services:
             - DOLI_DB_USER=root
             - DOLI_DB_PASSWORD=dolibarr
             - DOLI_ADMIN_LOGIN=Admin
-            - DOLI_MODULES=modSplash,modCommande,modProduct,modCategorie,modStock,modBanque,modSociete,modFacture
             - DOLI_URL_ROOT=http://latest.dolibarr.local
             - PHP_MEMORY_LIMIT=-1
             - SPLASH_WS_ID=ThisIsDolLatestKey
             - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
-            - SPLASH_WS_HOST=http://172.100.0.100/ws/soap            
+            - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
         volumes:
             - "./:/var/www/html/custom/"
             - "./.git/:/var/www/html/custom/.git/"
 #            - "./docker/overrides:/var/overrides/"
-        command: sh /var/www/html/custom/docker/docker-entrypoint.sh
+        entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
         hostname: latest.dolibarr.local
         networks:
             dolibarr:      { ipv4_address: 172.100.0.99 }
             splashsync:    { aliases: [ latest.dolibarr.local ] }
 
     ################################################################################
+    # Dolibarr V14
+    dol-14:
+        image: tuxgasy/dolibarr:14
+        container_name: dolibarr-v14
+        depends_on:
+            - mysql
+        links:
+            - mysql
+        environment:
+            - "DOLI_DB_TYPE=mysqli"
+            - "DOLI_DB_HOST=mysql"
+            - "DOLI_DB_NAME=dolibarr14"
+            - "DOLI_DB_USER=root"
+            - "DOLI_DB_PASSWORD=dolibarr"
+            - "DOLI_ADMIN_LOGIN=Admin"
+            - "PHP_MEMORY_LIMIT=-1"
+            - SPLASH_WS_ID=ThisIsDol14Key
+            - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
+            - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
+        volumes:
+            - "./:/var/www/html/custom/"
+            - "./.git/:/var/www/html/custom/.git/"
+        entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
+        hostname: v14.dolibarr.local
+        networks:
+            dolibarr:      { ipv4_address: 172.100.0.14 }
+            splashsync:    { aliases: [ v14.dolibarr.local ] }
+
+    ################################################################################
     # Dolibarr V13
     dol-13:
-        image: monogramm/docker-dolibarr:13.0
+        image: tuxgasy/dolibarr:13
         container_name: dolibarr-v13
         depends_on:
             - mysql
@@ -97,14 +126,13 @@ services:
             - "DOLI_DB_USER=root"
             - "DOLI_DB_PASSWORD=dolibarr"
             - "DOLI_ADMIN_LOGIN=Admin"
-            - "DOLI_MODULES=modSplash,modCommande,modProduct,modCategorie,modStock,modBanque,modSociete,modFacture"
             - "PHP_MEMORY_LIMIT=-1"
             - SPLASH_WS_ID=ThisIsDol13Key
             - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
             - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
         volumes:
             - "./:/var/www/html/custom/"
-        command: sh /var/www/html/custom/docker/docker-entrypoint.sh
+        entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
         hostname: v13.dolibarr.local
         networks:
             dolibarr:      { ipv4_address: 172.100.0.13 }
@@ -166,9 +194,9 @@ services:
 #            splashsync:    { aliases: [ v11.dolibarr.local ] }  
            
     ################################################################################
-    # Dolibarr V10     
+    # Dolibarr V10
     dol-10:
-        image: monogramm/docker-dolibarr:10.0
+        image: tuxgasy/dolibarr:10
         container_name: dolibarr-v10
         depends_on:
             - mysql
@@ -187,7 +215,7 @@ services:
         volumes:
             - "./:/var/www/html/custom/"
             - "./.git/:/var/www/html/custom/.git/"
-        command: sh /var/www/html/custom/docker/docker-entrypoint.sh
+        entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
         hostname: v10.dolibarr.local
         networks:
             dolibarr:      { ipv4_address: 172.100.0.10 }
