WIP: Compat with Dolibarr V14

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -89,23 +89,23 @@ Dol-14-Php-7.4:
 Dol-13-Php-7.3:
     image:          tuxgasy/dolibarr:13
     <<: *functionnal
-#
-# Dol-12-Php-7.2:
-#     image:          monogramm/docker-dolibarr:12.0-apache
-#     <<: *functionnal
-#
-# Dol-10-Php-7.2:
-#     image:          monogramm/docker-dolibarr:10.0
-#     <<: *functionnal
-#
-# Dol-9-Php-7.2:
-#     image:          monogramm/docker-dolibarr:9.0
-#     <<: *functionnal
-#
-# Dol-Dev-Php-7.2:
-#     image:          monogramm/docker-dolibarr:develop
-#     allow_failure:  true
-#     <<: *functionnal
+
+Dol-12-Php-7.2:
+    image:          monogramm/docker-dolibarr:12.0-apache
+    <<: *functionnal
+
+Dol-10-Php-7.2:
+    image:          monogramm/docker-dolibarr:10.0
+    <<: *functionnal
+
+Dol-9-Php-7.2:
+    image:          monogramm/docker-dolibarr:9.0
+    <<: *functionnal
+
+Dol-Dev-Php-7.2:
+    image:          monogramm/docker-dolibarr:develop
+    allow_failure:  true
+    <<: *functionnal
 
 
 ################################################################
